--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,15 @@
     <build>
         <plugins>
             <!-- Maven Compiler Plugin -->
-            <plugin>
+        <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
-            </plugin>
+            </plugin>  
 
             <!-- Maven Surefire Plugin -->
             <plugin>
