--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "request": "launch",
             "mainClass": "bgu.spl.mics.application.GurionRockRunner",
             "projectName": "spl225ass2",
-            "args": ["/workspaces/Skeleton/example input/configuration_file.json"]
+            "args": ["/workspaces/Skeleton/example_input_2/configuration_file.json"]
         },
         {
             "type": "java",
