--- a/example_input_with_error/configuration_file.json
+++ b/example_input_with_error/configuration_file.json
@@ -9,7 +9,7 @@
     ],
     "camera_datas_path": "./camera_data.json"
   },
-  "LiDarWorkers": {
+  "LidarWorkers": {
     "LidarConfigurations": [
       {
         "id": 1,
