--- a/example_input_2/configuration_file.json
+++ b/example_input_2/configuration_file.json
@@ -13,7 +13,7 @@
     ],
     "camera_datas_path": "./camera_data.json"
   },
-  "LidarWorkers": {
+  "LiDarWorkers": {
     "LidarConfigurations":[{
       "id": 1,
       "frequency": 4
